@@ -531,6 +531,13 @@ nav section {
   }
 }
 
+// For archetypes/referencebrowserwidget/browser/popup.pt.
+// Referencebrowserwidget results should not reach the bottom.
+// We can display the div with the review state inline.
+#atrbResultsTable td div {
+    display: inline;
+}
+
 // -----------------------------------------------------------------------------
 // Small screen / tablet
 // -----------------------------------------------------------------------------
